; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/udf/extr_udf_vfsops.c_udf_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/udf/extr_udf_vfsops.c_udf_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfsconf = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"UDF translation buffer, zone\00", align 1
@MAXNAMLEN = common dso_local global i32 0, align 4
@udf_zone_trans = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [14 x i8] c"UDF Node zone\00", align 1
@udf_zone_node = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [19 x i8] c"UDF Dirstream zone\00", align 1
@udf_zone_ds = common dso_local global i32* null, align 8
@.str.3 = private unnamed_addr constant [33 x i8] c"Cannot create allocation zones.\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vfsconf*)* @udf_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udf_init(%struct.vfsconf* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vfsconf*, align 8
  store %struct.vfsconf* %0, %struct.vfsconf** %3, align 8
  %4 = load i32, i32* @MAXNAMLEN, align 4
  %5 = sext i32 %4 to i64
  %6 = mul i64 %5, 4
  %7 = trunc i64 %6 to i32
  %8 = call i8* @uma_zcreate(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %7, i32* null, i32* null, i32* null, i32* null, i32 0, i32 0)
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** @udf_zone_trans, align 8
  %10 = call i8* @uma_zcreate(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 4, i32* null, i32* null, i32* null, i32* null, i32 0, i32 0)
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** @udf_zone_node, align 8
  %12 = call i8* @uma_zcreate(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i32 4, i32* null, i32* null, i32* null, i32* null, i32 0, i32 0)
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** @udf_zone_ds, align 8
  %14 = load i32*, i32** @udf_zone_node, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %22, label %16

16:                                               ; preds = %1
  %17 = load i32*, i32** @udf_zone_trans, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %16
  %20 = load i32*, i32** @udf_zone_ds, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %19, %16, %1
  %23 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0))
  %24 = load i32, i32* @ENOMEM, align 4
  store i32 %24, i32* %2, align 4
  br label %26

25:                                               ; preds = %19
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %25, %22
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i8* @uma_zcreate(i8*, i32, i32*, i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
